--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,8 @@
     "semi": "off",
     "no-console": "off",
     "import/extensions": "off",
-    "no-unused-vars": "off"
+    "no-unused-vars": "off",
+    "import/prefer-default-export": "off"
   },
   "root": true
 }
