--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.2.2",
-    "jest": "^28.1.0"
+    "jest": "^28.1.0",
+    "ramda": "^0.28.0"
   }
 }
